feat: token modify — app/http/remote/openapi
